blue nav and transparent badges

--- a/less/content.less
+++ b/less/content.less
@@ -185,25 +185,26 @@ img{
     white-space: nowrap;
     overflow: hidden;
     margin-bottom: -10px;
-    &.blue{
-        background: @blue;
-    }
-    &.purple{
-        background: @purple;
-    }
-    &.yellow{
-        background: @yellow;
-    }
-    &.orange{
-        background: @orange;
-    }
-    &.green{
-        background: @green;
-    }
-    &.pink{
-        background: @pink;
+    background: transparent;
+    // &.blue{
+    //     background: @blue;
+    // }
+    // &.purple{
+    //     background: @purple;
+    // }
+    // &.yellow{
+    //     background: @yellow;
+    // }
+    // &.orange{
+    //     background: @orange;
+    // }
+    // &.green{
+    //     background: @green;
+    // }
+    // &.pink{
+    //     background: @pink;
 
-    }
+    // }
 }
 
 
