--- a/less/nav.less
+++ b/less/nav.less
@@ -40,22 +40,28 @@ nav{
                 }
 
                 .purple{
-                    color: @purple;
+                    color: white;
+                    // color: @purple;
                 }
                 .blue {
-                    color: @blue;
+                    color: white;
+                    // color: @blue;
                 }
                 .yellow {
-                    color: @yellow;
+                    color: white;
+                    // color: @yellow;
                 }
                 .orange {
-                    color: @orange;
+                    color: white;
+                    // color: @orange;
                 }
                 .green {
-                    color: @green;
+                    color: white;
+                    // color: @green;
                 }
                 .pink{
-                    color: @pink;
+                    color: white;
+                    // color: @pink;
                 }
             }
             a{
@@ -63,38 +69,40 @@ nav{
                 line-height: 35px;
                 padding: 10px 0;
                 &.purple {
-                    
                     &.active, &:hover{
-                        color: @purple-active;
+                        color: @ms-blue;
+                        // color: @purple-active;
                     }
                 }
                 &.blue{
-                    
                     &.active, &:hover{
-                        color: @blue-active;
+                        color: @ms-blue;
+                        // color: @blue-active;
                     }
                 }
                 &.yellow{
-                   
                     &.active, &:hover{
-                        color: @yellow-active;
+                        color: @ms-blue;
+                        // color: @yellow-active;
                     }
                 }
                 &.orange{
-                    
                     &.active, &:hover{
-                        color: @orange-active;
+                        color: @ms-blue;
+                        // color: @orange-active;
                     }
                 }
                 &.green{
                     
                     &.active, &:hover{
-                        color: @green-active;
+                        color: @ms-blue;
+                        // color: @green-active;
                     }
                 }
                 &.pink{
                     &.active, &:hover{
-                        color: @pink-active;
+                        color: @ms-blue;
+                        // color: @pink-active;
                     }
                 }
             }
