--- a/less/content.less
+++ b/less/content.less
@@ -216,7 +216,7 @@ img{
         margin-bottom: 10px;
     }
     h6 {
-        grid-column: span 7;
+        grid-column: span 6;
         color: #3b3b3b;
     }
     p {
@@ -258,11 +258,8 @@ img{
 //section 2-3
 //Audience
 #section-2-3 {
-    h4 {
-        grid-column: span 7;
-    }
     .row-twelve {
-        grid-template-columns: repeat(10,1fr);
+        grid-template-columns: repeat(12,1fr);
     }
 }
 
@@ -819,43 +816,27 @@ img{
     display: grid;
     grid-column: span 8;
     grid-template-columns: repeat(10, 1fr);
+    position: relative;
     .left, .right{
         background: rgba(0, 0, 0, .4);
         padding: 30px 20px;
-        align-content: flex-start;
+        position: absolute;
+        bottom: 4px;
+        right: 3px;
         grid-row-gap: 20px;
         p {
             color: #ffffff;
             font-size: 15px;
             line-height: 20px;
-            margin-bottom: 30px;
+           
         }
     }
-    .left{
-        width: 250px;
-        margin-left: 30px;
-        margin-top: 30px;
-        grid-column-end: 2;
+    .left, .right{
+        grid-column-end: 9;
         grid-row-start: 1;
         z-index: 10;
-        margin-bottom: 50px;
         text-align: left;
-    }
-    .right{
-        margin-right: 30px;
-        margin-top: 30px;
-        width: 250px;
-        grid-column-end: 10;
-        grid-column-start: auto;
-        grid-row-start: 1;
-        z-index: 10;
-        margin-bottom: 50px;
-        @media all and (min-width: 1750px){
-            grid-column-end: 9;
-            margin-left: 0;
-        }
-    }
-    
+    }    
     .img-wrapper{
         grid-column-start: 1;
         grid-column-end: 10;
@@ -931,18 +912,21 @@ img{
 
 .drawer-content{
     display: none;
-    width: calc(~"97%/4");
-    position: absolute;
-    background: @ltlt-gray;
-    padding: 20px;
-    transform: translateY(42%);
+    
 }
 
 .drawer-close{
-    background: @nav-dk;
-    color: @dk-white;
-    padding: 5px 10px;
-    margin-bottom: 20px;
+    display: block;
+    padding-top: 25px;
+    padding-bottom: 10px;
+    font-size: 13px;
+    text-decoration: none;
+    text-transform: uppercase;
+    &:after{
+        padding-left: 10px;
+        content: "\E70E";
+        font-family: MWF-MDL2;
+    }
 }
 
 .head-info{
@@ -978,13 +962,6 @@ img{
     }
 }
 
-.row-fluid{
-    grid-column: span 9;
-    display: block;
-    .middle{
-        margin-left: 25%;
-    }
-}
 
 #menu-list{
     display: block;
