section 5-9 paragraph spacing

--- a/less/content.less
+++ b/less/content.less
@@ -737,14 +737,10 @@ img{
 #section-5-9{
     .half{
         grid-column: span 4;
+        grid-template-rows: 50px 1fr;
     }
-    .donts{
-        .title{
-            padding-bottom: 35px;
-        }
-        p{
-            margin-bottom: 10px;
-        }
+    p{
+        line-height: 30px;
     }
 }
 
