--- a/less/content.less
+++ b/less/content.less
@@ -618,6 +618,10 @@ img{
     .row-seven{
         grid-column-gap: 40px;
         display: grid;
+        grid-template-columns: repeat(10, 1fr);
+        @media all AND (max-width: 1600px){
+            grid-template-columns: repeat(7, 1fr);
+        }
     }
     .half{
         display: flex;
