--- a/less/nav.less
+++ b/less/nav.less
@@ -29,6 +29,12 @@ nav{
         }
         li {
             padding: 7px 5px 7px 20px;
+            font-family: "SegoeUI";
+            &.title {
+                color: #fff;
+                margin-bottom: 40px;
+                font-family: "SegoeUISemiBold"
+            }
             &:first-of-type {
                 padding-top: 14px;
             }
@@ -73,38 +79,38 @@ nav{
                 padding: 10px 0;
                 &.purple {
                     &.active, &:hover{
-                        color: @ms-blue;
+                        color: @blue;
                         // color: @purple-active;
                     }
                 }
                 &.blue{
                     &.active, &:hover{
-                        color: @ms-blue;
+                        color: @blue;
                         // color: @blue-active;
                     }
                 }
                 &.yellow{
                     &.active, &:hover{
-                        color: @ms-blue;
+                        color: @blue;
                         // color: @yellow-active;
                     }
                 }
                 &.orange{
                     &.active, &:hover{
-                        color: @ms-blue;
+                        color: @blue;
                         // color: @orange-active;
                     }
                 }
                 &.green{
                     
                     &.active, &:hover{
-                        color: @ms-blue;
+                        color: @blue;
                         // color: @green-active;
                     }
                 }
                 &.pink{
                     &.active, &:hover{
-                        color: @ms-blue;
+                        color: @blue;
                         // color: @pink-active;
                     }
                 }
