--- a/less/typography.less
+++ b/less/typography.less
@@ -126,7 +126,10 @@ h6{
     line-height: 1.2em;
     padding-bottom: 5px;
     &.small{
-        font-size: 28px;
+        font-size: 20px;
+        line-height: 28px;
+        padding-bottom: 0;
+        margin-bottom: 15px;
     }
 }
 p {
@@ -135,7 +138,7 @@ p {
     color: @body-text-black;
     letter-spacing: .025em;
     &.title{
-        font-size: 22px;
+        font-size: 20px;
         line-height: 28px;
         font-weight: 600;
         font-family: 'SegoeUISemiBold';
@@ -174,12 +177,12 @@ p {
         margin-bottom: 15px;
 
         &.large{
-            font-size: 22px;
+            font-size: 20px;
             line-height: 28px;
         }
     }
     .desc{
-        font-size: 22px;
+        font-size: 20px;
         line-height: 28px;
         letter-spacing: .025em;
         font-family: 'SegoeUISemiBold';
