--- a/less/grid.less
+++ b/less/grid.less
@@ -301,6 +301,7 @@ h6, h2, picture{
     display: block;
     float: left;
     grid-column: span 9;
+    max-width: 900px;
     .thirds{
         width: 33.33%;
         float: left;
