--- a/less/content.less
+++ b/less/content.less
@@ -441,10 +441,10 @@ img{
     .donts{
         grid-column: span 2;
     }
-    .row-lined.dark {
-        &:before {
-        }
-    }
+    // .row-lined.dark {
+    //     &:before {
+    //     }
+    // }
 
 }
 
@@ -777,12 +777,15 @@ img{
     }
 }
 #section-5-6{
-    .row-twelve .fourths{
-        display: grid;
-        grid-template-rows: minmax(60px, min-content) max-content 1fr;
-        grid-row-gap: 0px;
-        img {
-            margin-bottom: 15px;
+    .row-twelve{
+        grid-template-columns: repeat(11, 1fr);
+        .fourths{
+            display: grid;
+            grid-template-rows: min-content max-content 1fr;
+            grid-row-gap: 0px;
+            img, .title {
+                margin-bottom: 15px;
+            }
         }
     }
 }
