--- a/less/desktop.less
+++ b/less/desktop.less
@@ -231,8 +231,11 @@
     #section-5-5 .thirds .title {
         font-size: 1.5em;
     }
-    #section-5-6 .row-twelve .fourths {
-        grid-template-rows: minmax(40px, min-content) max-content 1fr;
+    #section-5-6 .row-twelve {
+        grid-template-columns: repeat(8, 1fr);
+        .fourths {
+            grid-template-rows: minmax(40px, min-content) max-content 1fr;
+        }
     }
     #section-5-8 {
         p {
