color section height

--- a/less/content.less
+++ b/less/content.less
@@ -19,7 +19,7 @@ main > section{
 //set items
 img{
     max-width: 100%;
-    align-self: self-end;
+    //align-self: self-end;  only change for specific images
 }
 
 .no-padding {
@@ -683,6 +683,7 @@ img{
        } 
        .double{
            grid-column: span 2;
+           min-height: 165px;
        }
        .single{
            grid-column: span 1;
