--- a/styles/main.css
+++ b/styles/main.css
@@ -20,8 +20,6 @@ main > section {
 }
 img {
   max-width: 100%;
-  -ms-flex-item-align: self-end;
-  align-self: self-end;
 }
 .no-padding {
   padding: 0!important;
@@ -575,6 +573,7 @@ img {
 }
 #section-5-3 .half .double {
   grid-column: span 2;
+  min-height: 165px;
 }
 #section-5-3 .half .single {
   grid-column: span 1;
