--- a/less/laptop.less
+++ b/less/laptop.less
@@ -247,7 +247,8 @@
     margin-right: 10px;
     grid-template-rows: repeat(2, min-content);
     .left, .right{
-      margin: -5px 0 20px;
+      // margin: -5px 0 20px;
+      left: 0;
       width: 100%;
       padding: 15px 10px;
       background: #000;
