--- a/less/mobile.less
+++ b/less/mobile.less
@@ -19,6 +19,11 @@
   #section-1-2 h6{
     font-size: 1.25em;
   }
+  .overlay{
+    .right, .left{
+      position: relative;
+    }
+  }
   .cross-through{
     background-position: -20px 60%;
   }
