--- a/styles/main.css
+++ b/styles/main.css
@@ -655,7 +655,10 @@ img {
   font-family: "SegoeUISemiBold";
 }
 #section-5-5 .row.v-center .thirds {
-  grid-template-rows: 85px 1fr;
+  grid-template-rows: 100px -webkit-min-content;
+  grid-template-rows: 100px min-content;
+  -ms-flex-item-align: baseline;
+  align-self: baseline;
 }
 #section-5-5 .row.v-center .thirds img {
   grid-column: span 2;
@@ -764,7 +767,7 @@ img {
 .overlay {
   display: grid;
   grid-column: span 8;
-  grid-template-columns: repeat(10, 1fr);
+  grid-template-columns: 1fr;
   position: relative;
 }
 .overlay .left,
@@ -773,7 +776,8 @@ img {
   padding: 30px 20px;
   position: absolute;
   bottom: 4px;
-  right: 3px;
+  right: 0;
+  left: 0;
   grid-row-gap: 20px;
 }
 .overlay .left p,
@@ -793,6 +797,9 @@ img {
   grid-column-start: 1;
   grid-column-end: 10;
   grid-row-start: 1;
+}
+.overlay img {
+  width: 100%;
 }
 .dos .title,
 .dos.title {
@@ -2053,7 +2060,7 @@ a {
   }
   .overlay .left,
   .overlay .right {
-    margin: -5px 0 20px;
+    left: 0;
     width: 100%;
     padding: 15px 10px;
     background: #000;
@@ -2329,6 +2336,10 @@ a {
   }
   #section-1-2 h6 {
     font-size: 1.25em;
+  }
+  .overlay .right,
+  .overlay .left {
+    position: relative;
   }
   .cross-through {
     background-position: -20px 60%;
