--- a/less/mobile.less
+++ b/less/mobile.less
@@ -19,6 +19,15 @@
   #section-1-2 h6{
     font-size: 1.25em;
   }
+  #section-5-4 .type-chart{
+    .single{
+      grid-column: span 2;
+    }
+     h4{
+      font-size: 32px;
+    }
+  }
+
   .overlay{
     .right, .left{
       position: relative;
@@ -27,7 +36,7 @@
   .cross-through{
     background-position: -20px 60%;
   }
-
+  
   .row-twelve{
   
     .fourths{
@@ -85,6 +94,12 @@
   }
   .row-fluid .middle{
     width: 100%;
+  }
+  .row-floating{
+    .thirds{
+      width: 100%;
+      margin-bottom: 15px;
+    }
   }
 
   .donts {
