edge fix for row-lined

--- a/less/content.less
+++ b/less/content.less
@@ -412,7 +412,7 @@ img{
 }
 #section-3-3{
     .thirds{
-        
+        grid-template-rows: min-content min-content;
         .title{
             font-size: 20px;
             font-family: 'SegoeUISemiBold';
