row-lined padding for edge/ff

--- a/styles/main.css
+++ b/styles/main.css
@@ -354,7 +354,7 @@ img {
 }
 #section-3-3 .dos,
 #section-3-3 .donts {
-  padding: 20px 0 0;
+  padding: 20px 0;
 }
 #section-3-3 .dos .title,
 #section-3-3 .donts .title {
