--- a/less/content.less
+++ b/less/content.less
@@ -428,7 +428,7 @@ img{
         }
     }
     .dos, .donts{
-        padding: 20px 0 0;
+        padding: 20px 0;
         .title{
             font-family: 'SegoeUISemiBold';
             text-decoration: none;
