Thank you (final section) creation and style

--- a/less/content.less
+++ b/less/content.less
@@ -170,6 +170,21 @@ img{
         background: @other-dk-white;
     }
 }
+#section-7,
+#section-7-1 {
+    background: #3B3B3B;
+    h3, h4, h5, p {
+        color: #fff;
+    }
+    a {
+        color: @blue-active;
+        padding-bottom: 5px;
+        display: inline-block;
+        &:hover {
+            color: #B5F3FF ;
+        }
+    }
+}
 .badge{
     justify-self: self-start;
     grid-column: ~" 1 / -1 ";
