--- a/less/grid.less
+++ b/less/grid.less
@@ -213,7 +213,7 @@ h6, h2, picture{
     grid-column: span 2;
     grid-template-columns: 1fr;
     img{
-        width: 100%;
+        width: auto;
     }
     p{
         padding-top: 10px;
