--- a/less/nav.less
+++ b/less/nav.less
@@ -33,7 +33,7 @@ nav{
             &.title {
                 color: #fff;
                 margin-bottom: 40px;
-                font-family: "SegoeUISemiBold"
+                font-family: "SegoeUISemiBold";
                 font-size: 18px;
             }
             &:first-of-type {
