clean up images in section 4

--- a/less/content.less
+++ b/less/content.less
@@ -19,7 +19,7 @@ main > section{
 //set items
 img{
     max-width: 100%;
-    //align-self: self-end;  only change for specific images
+    align-self: self-end;
 }
 
 .no-padding {
@@ -672,6 +672,11 @@ img{
             .swatch{
                 grid-column: span 8;
             }
+        }
+    }
+    .thirds.centered {
+        img {
+            margin: 0 auto;
         }
     }
 }
