--- a/styles/main.css
+++ b/styles/main.css
@@ -20,6 +20,8 @@ main > section {
 }
 img {
   max-width: 100%;
+  -ms-flex-item-align: self-end;
+  align-self: self-end;
 }
 .no-padding {
   padding: 0!important;
@@ -580,6 +582,9 @@ img {
 #section-4-9 .half .half .swatch,
 #section-4-9 img .half .swatch {
   grid-column: span 8;
+}
+#section-4-9 .thirds.centered img {
+  margin: 0 auto;
 }
 #section-5-2 .row .thirds {
   grid-template-rows: -webkit-min-content -webkit-min-content;
