--- a/less/content.less
+++ b/less/content.less
@@ -19,7 +19,6 @@ main > section{
 //set items
 img{
     max-width: 100%;
-    align-self: self-end;
 }
 
 .no-padding {
@@ -634,6 +633,9 @@ img{
     }
 }
 #section-4-8{
+    img {
+        align-self: self-end;
+    }
     .row-seven{
         grid-column-gap: 40px;
         display: grid;
