tighter spacing for 5-7

--- a/less/content.less
+++ b/less/content.less
@@ -813,6 +813,7 @@ img{
 #section-5-7{
     .row-seven{
         grid-column-gap: 40px;
+        grid-template-columns: repeat(9, 1fr);
     }
     
     .half{
