--- a/less/content.less
+++ b/less/content.less
@@ -814,6 +814,7 @@ img{
     .row-seven{
         grid-column-gap: 60px;
         grid-template-columns: repeat(9, 1fr);
+        grid-row-gap: 40px;
     }
     
     .half{
