--- a/styles/main.css
+++ b/styles/main.css
@@ -718,6 +718,7 @@ img {
 #section-5-7 .row-seven {
   grid-column-gap: 60px;
   grid-template-columns: repeat(9, 1fr);
+  grid-row-gap: 40px;
 }
 #section-5-7 .half {
   grid-column-gap: 10px;
