--- a/less/content.less
+++ b/less/content.less
@@ -811,10 +811,11 @@ img{
 }
 
 #section-5-7{
+    grid-row-gap: 40px;
     .row-seven{
         grid-column-gap: 60px;
         grid-template-columns: repeat(9, 1fr);
-        grid-row-gap: 40px;
+        
     }
     
     .half{
@@ -824,8 +825,11 @@ img{
         grid-column: span 2;
     }
     .single{
+        display: grid;
+        grid-template-rows: min-content min-content;
+        grid-template-columns: 1fr;
         p{
-            padding-right: 30px;
+            padding-right: 10px;
         }
     }
     .title {
