--- a/styles/main.css
+++ b/styles/main.css
@@ -715,10 +715,12 @@ img {
 #section-5-6 .row-twelve .fourths .title {
   margin-bottom: 15px;
 }
+#section-5-7 {
+  grid-row-gap: 40px;
+}
 #section-5-7 .row-seven {
   grid-column-gap: 60px;
   grid-template-columns: repeat(9, 1fr);
-  grid-row-gap: 40px;
 }
 #section-5-7 .half {
   grid-column-gap: 10px;
@@ -726,8 +728,14 @@ img {
 #section-5-7 .double {
   grid-column: span 2;
 }
+#section-5-7 .single {
+  display: grid;
+  grid-template-rows: -webkit-min-content -webkit-min-content;
+  grid-template-rows: min-content min-content;
+  grid-template-columns: 1fr;
+}
 #section-5-7 .single p {
-  padding-right: 30px;
+  padding-right: 10px;
 }
 #section-5-7 .title {
   margin-bottom: 15px;
