--- a/less/desktop.less
+++ b/less/desktop.less
@@ -237,6 +237,11 @@
             grid-template-rows: minmax(40px, min-content) max-content 1fr;
         }
     }
+    #section-5-7{
+        .row-seven{
+            grid-template-columns: repeat(7, 1fr);
+        }
+    }
     #section-5-8 {
         p {
             margin-right: 20px;
