--- a/less/laptop.less
+++ b/less/laptop.less
@@ -182,13 +182,8 @@
   }
 
   #section-5-7{
-    .row-twelve     {
-      grid-row-gap: 20px;
-      .fourths{
-        display: grid;
-        grid-template-rows: minmax(50px, min-content) min-content min-content;
-        grid-row-gap: 10px;
-      }
+    .row-seven {
+      grid-template-columns: repeat(6, 1fr);
     }
   }
 
