--- a/less/mobile.less
+++ b/less/mobile.less
@@ -253,8 +253,20 @@
       }
     }
   }
-  #section-5-7 p{
-    padding-right: 0;
+  #section-5-7 {
+    .row-seven{
+      grid-row-gap: 40px;
+    }
+    p{
+      padding-right: 0;
+      margin-bottom: 20px;
+    } 
+    .half{
+      grid-column: span 6;
+    }
+    .single{
+      grid-column: span 2;
+    }
   }
 
   #section-5-8, #section-5-10 {
