--- a/less/tablet.less
+++ b/less/tablet.less
@@ -223,9 +223,14 @@
             margin-bottom: 30px;
         }
     }
-  #section-5-7 p {
-      padding-right: 50px;
-  }
+  #section-5-7{
+        p {
+            padding-right: 50px;
+        }
+        .row-seven .half{
+            grid-column: span 6;
+        }
+    }
   #section-5-8 .title {
       margin-right: 0;
       &.extra {
