update npm, restore grid column for wrapper

--- a/less/grid.less
+++ b/less/grid.less
@@ -45,6 +45,8 @@ header{
                 grid-column-end: 10;
                 display: grid;
                 grid-gap: 20px;
+                grid-template-columns:  repeat(9, 1fr);
+
                 
             }
 
