spacing for Do section 5-13

--- a/less/content.less
+++ b/less/content.less
@@ -912,10 +912,7 @@ img{
     .dos{
         grid-template-rows: min-content min-content;
     }
-}
-
-#section-5-13 {
-    .donts {
+    .dos, .donts {
         p {
             padding-bottom: 10px;
         }
